fixing extra space

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -387,5 +387,6 @@ article{
 
     .wrapper{
         width: 90%;
+        min-height: 100%;
     }
 }
